--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ header{
     }
 }
 
+
 /* Styling of the Hero Section */
 
 .mun__hero{
@@ -867,7 +868,7 @@ video {
     span#SS{
         font-size: 0.55rem;
     }
-    center#invitaion{
+    center #invitaion{
         /* margin-top: -100px; */
     }
     .message-from-sg{
@@ -889,6 +890,30 @@ video {
         letter-spacing: 0.1rem;
         text-align: center;
         padding-top: 1rem;
+    }
+}
+@media (max-height:830px){
+    #footer-mun{
+        margin-top: 60px;
+    }
+    .message-from-sg{
+        margin:4rem auto;
+    }
+}
+@media (max-height:750px){
+    #footer-mun{
+        margin-top: 100px;
+    }
+    .message-from-sg{
+        margin:0rem auto;
+    }
+}
+@media (max-height:660px){
+    #footer-mun{
+        margin-top: 150px;
+    }
+    .message-from-sg{
+        margin:-2rem auto;
     }
 }
 
